@@ -1,5 +1,14 @@
 2002-10-01  David Hyatt  <hyatt@apple.com>
 
+	Fix the case sensitivity problem with attribute names 
+	in HTML.  They are now lower-cased when being queried
+	from the DOM. Bug 3058145.
+	
+        * khtml/xml/dom_docimpl.cpp:
+        (DocumentImpl::attrName):
+
+2002-10-01  David Hyatt  <hyatt@apple.com>
+
 	Make sure to keep the fix checked in for 1.18.  That fix is
 	good.
 	
